updated example to explain dictfile

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parse directly from the Fed Board's website. First argument is the path to the output file (will be overwritten). Default value is `FRB_Z1.csv`. Second argument is the URL of the page to parse. Default value is `https://www.federalreserve.gov/datadownload/Output.aspx?rel=Z1&filetype=zip` and should be fine."
+    "Parse directly from the Fed Board's website. \n",
+    "1. First argument is the path to the output file (will be overwritten). Default value is `FRB_Z1.csv`. \n",
+    "2. Second argument is the URL of the page to parse. Default value is `https://www.federalreserve.gov/datadownload/Output.aspx?rel=Z1&filetype=zip` and should be fine.\n",
+    "3. Third argument is path to the data dictionary output file. A dictionary file contains a description of each series, and may be merged into the dataset later (see `wrangling_example.ipynb` for details). Default is empty, meaning a dictionary file is not created. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, if the file has already been downloaded and unzipped, the XML file can be parsed directly offline."
+    "Alternatively, if the file has already been downloaded and unzipped, the XML file can be parsed directly offline. Note that `buffer_to_csv` takes buffers as inputs, not filenames, so the files must be read into memory first. "
    ]
   },
   {
@@ -61,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
