updated sample output

--- a/wrangling_example.ipynb
+++ b/wrangling_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,24 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfcombo = dfdict.merge(df,on='series_code')\n",
-    "dfcombo['time_period'] = pd.to_datetime(dfcombo['time_period'], format='%Y-%m-%d')\n",
-    "dfcombo.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If neeeded, reshape the data long to wide:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -91,111 +73,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>FL010000016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2009-12-31</td>\n",
-       "      <td>11.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FL010000016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2010-03-31</td>\n",
-       "      <td>11.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>FL010000016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2010-06-30</td>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>FL010000016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2010-09-30</td>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>FL010000016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2010-12-31</td>\n",
-       "      <td>12.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1439647</th>\n",
-       "      <td>FL915000085</td>\n",
-       "      <td>91</td>\n",
-       "      <td>50000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Currency</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2022-06-30</td>\n",
-       "      <td>-4378973.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1439648</th>\n",
-       "      <td>FL915000085</td>\n",
-       "      <td>91</td>\n",
-       "      <td>50000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Currency</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>2022-09-30</td>\n",
-       "      <td>-3984429.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1439649</th>\n",
+       "      <th>1421270</th>\n",
        "      <td>FL915000085</td>\n",
        "      <td>91</td>\n",
        "      <td>50000</td>\n",
@@ -205,10 +83,10 @@
        "      <td>1000000</td>\n",
        "      <td>Q</td>\n",
        "      <td>2022-12-31</td>\n",
-       "      <td>-3690317.0</td>\n",
+       "      <td>-3867606.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1439650</th>\n",
+       "      <th>1421271</th>\n",
        "      <td>FL915000085</td>\n",
        "      <td>91</td>\n",
        "      <td>50000</td>\n",
@@ -218,10 +96,10 @@
        "      <td>1000000</td>\n",
        "      <td>Q</td>\n",
        "      <td>2023-03-31</td>\n",
-       "      <td>-4012990.0</td>\n",
+       "      <td>-4117137.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1439651</th>\n",
+       "      <th>1421272</th>\n",
        "      <td>FL915000085</td>\n",
        "      <td>91</td>\n",
        "      <td>50000</td>\n",
@@ -231,51 +109,323 @@
        "      <td>1000000</td>\n",
        "      <td>Q</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>-4062131.0</td>\n",
+       "      <td>-4137205.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421273</th>\n",
+       "      <td>FL915000085</td>\n",
+       "      <td>91</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Currency</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>-3876289.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1421274</th>\n",
+       "      <td>FL915000085</td>\n",
+       "      <td>91</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Currency</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1000000</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>-4038485.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1439652 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         series_code  sector  instrument  series_type      unit currency  \\\n",
-       "0        FL010000016       1           0            6   Percent      NaN   \n",
-       "1        FL010000016       1           0            6   Percent      NaN   \n",
-       "2        FL010000016       1           0            6   Percent      NaN   \n",
-       "3        FL010000016       1           0            6   Percent      NaN   \n",
-       "4        FL010000016       1           0            6   Percent      NaN   \n",
-       "...              ...     ...         ...          ...       ...      ...   \n",
-       "1439647  FL915000085      91       50000            5  Currency      USD   \n",
-       "1439648  FL915000085      91       50000            5  Currency      USD   \n",
-       "1439649  FL915000085      91       50000            5  Currency      USD   \n",
-       "1439650  FL915000085      91       50000            5  Currency      USD   \n",
-       "1439651  FL915000085      91       50000            5  Currency      USD   \n",
+       "1421270  FL915000085      91       50000            5  Currency      USD   \n",
+       "1421271  FL915000085      91       50000            5  Currency      USD   \n",
+       "1421272  FL915000085      91       50000            5  Currency      USD   \n",
+       "1421273  FL915000085      91       50000            5  Currency      USD   \n",
+       "1421274  FL915000085      91       50000            5  Currency      USD   \n",
        "\n",
        "            mult frequency time_period  obs_value  \n",
-       "0              1         Q  2009-12-31       11.4  \n",
-       "1              1         Q  2010-03-31       11.8  \n",
-       "2              1         Q  2010-06-30       12.1  \n",
-       "3              1         Q  2010-09-30       12.3  \n",
-       "4              1         Q  2010-12-31       12.3  \n",
-       "...          ...       ...         ...        ...  \n",
-       "1439647  1000000         Q  2022-06-30 -4378973.0  \n",
-       "1439648  1000000         Q  2022-09-30 -3984429.0  \n",
-       "1439649  1000000         Q  2022-12-31 -3690317.0  \n",
-       "1439650  1000000         Q  2023-03-31 -4012990.0  \n",
-       "1439651  1000000         Q  2023-06-30 -4062131.0  \n",
-       "\n",
-       "[1439652 rows x 10 columns]"
+       "1421270  1000000         Q  2022-12-31 -3867606.0  \n",
+       "1421271  1000000         Q  2023-03-31 -4117137.0  \n",
+       "1421272  1000000         Q  2023-06-30 -4137205.0  \n",
+       "1421273  1000000         Q  2023-09-30 -3876289.0  \n",
+       "1421274  1000000         Q  2023-12-31 -4038485.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfcombo = dfdict.merge(df,on='series_code')\n",
+    "dfcombo['time_period'] = pd.to_datetime(dfcombo['time_period'], format='%Y-%m-%d')\n",
+    "dfcombo.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If neeeded, reshape the data long to wide:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>series_code</th>\n",
+       "      <th>FL010000016</th>\n",
+       "      <th>FL010000026</th>\n",
+       "      <th>FL010000036</th>\n",
+       "      <th>FL010000046</th>\n",
+       "      <th>FL010000056</th>\n",
+       "      <th>FL010000066</th>\n",
+       "      <th>FL010000076</th>\n",
+       "      <th>FL010000266</th>\n",
+       "      <th>FL010000276</th>\n",
+       "      <th>FL010000286</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LM893064105</th>\n",
+       "      <th>LM893081115</th>\n",
+       "      <th>LM893111005</th>\n",
+       "      <th>LM893131573</th>\n",
+       "      <th>LM893181115</th>\n",
+       "      <th>LM903061103</th>\n",
+       "      <th>LM903061703</th>\n",
+       "      <th>LM903062003</th>\n",
+       "      <th>LM903063003</th>\n",
+       "      <th>LM904022005</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time_period</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-12-31</th>\n",
+       "      <td>13.4</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>-4.9</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>238.1</td>\n",
+       "      <td>9.905183</td>\n",
+       "      <td>73.753968</td>\n",
+       "      <td>352.401588</td>\n",
+       "      <td>86.731100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64703092.0</td>\n",
+       "      <td>37521471.0</td>\n",
+       "      <td>385482.0</td>\n",
+       "      <td>11950000.0</td>\n",
+       "      <td>37521471.0</td>\n",
+       "      <td>2196350.0</td>\n",
+       "      <td>977772.0</td>\n",
+       "      <td>145032.0</td>\n",
+       "      <td>1518477.0</td>\n",
+       "      <td>4837631.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-31</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>-5.1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>194.9</td>\n",
+       "      <td>3.891839</td>\n",
+       "      <td>74.086820</td>\n",
+       "      <td>361.177335</td>\n",
+       "      <td>84.885845</td>\n",
+       "      <td>...</td>\n",
+       "      <td>68430986.0</td>\n",
+       "      <td>38699962.0</td>\n",
+       "      <td>390341.0</td>\n",
+       "      <td>12465000.0</td>\n",
+       "      <td>38699962.0</td>\n",
+       "      <td>1792579.0</td>\n",
+       "      <td>820910.0</td>\n",
+       "      <td>74736.0</td>\n",
+       "      <td>1344148.0</td>\n",
+       "      <td>4032373.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-30</th>\n",
+       "      <td>14.8</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>-5.1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>0.239677</td>\n",
+       "      <td>74.856819</td>\n",
+       "      <td>365.150178</td>\n",
+       "      <td>83.044435</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72789055.0</td>\n",
+       "      <td>40106453.0</td>\n",
+       "      <td>385647.0</td>\n",
+       "      <td>12955000.0</td>\n",
+       "      <td>40106453.0</td>\n",
+       "      <td>2130834.0</td>\n",
+       "      <td>973486.0</td>\n",
+       "      <td>101114.0</td>\n",
+       "      <td>1271494.0</td>\n",
+       "      <td>4476928.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-30</th>\n",
+       "      <td>13.8</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>-5.1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>165.7</td>\n",
+       "      <td>1.126231</td>\n",
+       "      <td>75.049930</td>\n",
+       "      <td>353.952782</td>\n",
+       "      <td>85.504420</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70151832.0</td>\n",
+       "      <td>39196740.0</td>\n",
+       "      <td>380923.0</td>\n",
+       "      <td>12566000.0</td>\n",
+       "      <td>39196740.0</td>\n",
+       "      <td>2720243.0</td>\n",
+       "      <td>1240959.0</td>\n",
+       "      <td>267105.0</td>\n",
+       "      <td>1527426.0</td>\n",
+       "      <td>5755733.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>13.7</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>-5.1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>168.5</td>\n",
+       "      <td>2.639846</td>\n",
+       "      <td>75.692945</td>\n",
+       "      <td>366.438023</td>\n",
+       "      <td>84.241350</td>\n",
+       "      <td>...</td>\n",
+       "      <td>78052905.0</td>\n",
+       "      <td>41180865.0</td>\n",
+       "      <td>388046.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41180865.0</td>\n",
+       "      <td>1813184.0</td>\n",
+       "      <td>834582.0</td>\n",
+       "      <td>29686.0</td>\n",
+       "      <td>947595.0</td>\n",
+       "      <td>3625047.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 4654 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "series_code  FL010000016  FL010000026  FL010000036  FL010000046  FL010000056  \\\n",
+       "time_period                                                                    \n",
+       "2022-12-31          13.4          8.4         -4.9          0.7          1.4   \n",
+       "2023-03-31          13.6          8.4         -5.1          0.7          1.6   \n",
+       "2023-06-30          14.8          8.7         -5.1          0.7          1.5   \n",
+       "2023-09-30          13.8          8.6         -5.1          0.8          1.5   \n",
+       "2023-12-31          13.7          8.5         -5.1          0.8          1.3   \n",
+       "\n",
+       "series_code  FL010000066  FL010000076  FL010000266  FL010000276  FL010000286  \\\n",
+       "time_period                                                                    \n",
+       "2022-12-31         238.1     9.905183    73.753968   352.401588    86.731100   \n",
+       "2023-03-31         194.9     3.891839    74.086820   361.177335    84.885845   \n",
+       "2023-06-30         189.0     0.239677    74.856819   365.150178    83.044435   \n",
+       "2023-09-30         165.7     1.126231    75.049930   353.952782    85.504420   \n",
+       "2023-12-31         168.5     2.639846    75.692945   366.438023    84.241350   \n",
+       "\n",
+       "series_code  ...  LM893064105  LM893081115  LM893111005  LM893131573  \\\n",
+       "time_period  ...                                                       \n",
+       "2022-12-31   ...   64703092.0   37521471.0     385482.0   11950000.0   \n",
+       "2023-03-31   ...   68430986.0   38699962.0     390341.0   12465000.0   \n",
+       "2023-06-30   ...   72789055.0   40106453.0     385647.0   12955000.0   \n",
+       "2023-09-30   ...   70151832.0   39196740.0     380923.0   12566000.0   \n",
+       "2023-12-31   ...   78052905.0   41180865.0     388046.0          NaN   \n",
+       "\n",
+       "series_code  LM893181115  LM903061103  LM903061703  LM903062003  LM903063003  \\\n",
+       "time_period                                                                    \n",
+       "2022-12-31    37521471.0    2196350.0     977772.0     145032.0    1518477.0   \n",
+       "2023-03-31    38699962.0    1792579.0     820910.0      74736.0    1344148.0   \n",
+       "2023-06-30    40106453.0    2130834.0     973486.0     101114.0    1271494.0   \n",
+       "2023-09-30    39196740.0    2720243.0    1240959.0     267105.0    1527426.0   \n",
+       "2023-12-31    41180865.0    1813184.0     834582.0      29686.0     947595.0   \n",
+       "\n",
+       "series_code  LM904022005  \n",
+       "time_period               \n",
+       "2022-12-31     4837631.0  \n",
+       "2023-03-31     4032373.0  \n",
+       "2023-06-30     4476928.0  \n",
+       "2023-09-30     5755733.0  \n",
+       "2023-12-31     3625047.0  \n",
+       "\n",
+       "[5 rows x 4654 columns]"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfwide = dfcombo.pivot(index='time_period', columns='series_code', values='obs_value')\n",
-    "dfwide.head()"
+    "dfwide.tail()"
    ]
   }
  ],
